# AcebergSkillit

./: .gitignore  PROJECT_TREE_EXPLAINED.md  PROJECT_TREE_SIMPLE.md  README.md  api.py  app.py  main.py  output.txt  pyproject.toml  soul.md
aceberg_skillit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CODE_READING_GUIDE.md  SKILL_PACK_DESIGN.md
memory/: memory.jsonl
output/s_23c30ab8e3/20260501_001912/: generated_script.md
output/s_44d5230012/: promotion_candidate.json
output/s_44d5230012/20260428_123502/: generated_script.py  wellfound_report.html
output/s_44d5230012/20260430_150102/: zhihu_analysis.md
output/s_44d5230012/20260430_151557/: zhihu_analysis.md
output/s_c2c9e4c8ba/: promotion_candidate.json
output/s_c2c9e4c8ba/20260428_102746/: generated_script.py  sina_news_today.xlsx
skillit/: __init__.py  cli.py  compressor.py  config.py  executor.py  llm.py  memory.py  planner.py  schema.py  session_store.py  skill_loader.py  tools.py
skills/: coding.md  default.md  file_ops.md  memory_manager.md  planner.md
skills/coding/: skill.md
skills/coding/scripts/: summarize_patch.py
skills/data_export/: SKILL.md
skills/default/: skill.md
skills/file_ops/: skill.md
skills/file_ops/scripts/: list_tree.py
skills/memory_manager/: skill.md
skills/planner/: skill.md
skills/research/: SKILL.md
test/: douban_scraper.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.jsx  styles.css
web/src/components/: Icons.jsx  Sidebar.jsx  TopBar.jsx
(+5 files in other folders)
